On branch master 	modified:   QtPropertyCodeGenerator.pro 	modified:   README.md 	modified:   classsettings.cpp 	modified:   classsettings.h 	modified:   classsettingsGeneratorFunctions.cpp 	modified:   classsettingsInlineFunctions.h 	new file:   codescheme/paraments_Base.h 	renamed:    paraments.h -> codescheme/paraments_CodeFormat.h 	new file:   codescheme/paraments_DocComment_Doxygen.h 	new file:   codescheme/paraments_DocComment_Doxygen_JavaLike.h 	new file:   codescheme/paraments_NameScheme.h 	modified:   dialogedit.cpp 	modified:   dialogedit.h 	modified:   dialogedit.ui 	modified:   dialogset.cpp 	modified:   dialogset.h 	modified:   dialogset.ui 	modified:   paraments.h 	modified:   propertiesgroup.h 	modified:   propertiesgroupInlineFunctions.h 	modified:   propertiesgroupdata.cpp 	modified:   property.cpp 	modified:   property.h 	modified:   propertyInlineFunctions.h 	modified:   propertydata.cpp 	modified:   propertydata.h 	modified:   sharedFunctions.h 	modified:   test1.ini 	modified:   widget.cpp 	modified:   widget.h 	modified:   widget.ui 	1.完善界面与程序。 	2.修正PropertiesGroupData类拷贝构造函数不完全，并导致ClassSettings不能正确复制的bug。 	3.拆分paraments.h，将代码方案的部分放到codescheme目录下。 	4.添加公共函数indentCode和inlineNotation函数。

--- a/dialogset.ui
+++ b/dialogset.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>575</width>
-    <height>489</height>
+    <height>492</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -141,6 +141,20 @@
         </layout>
        </item>
        <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_10">
+         <item>
+          <widget class="QLabel" name="labelClassDocBrief">
+           <property name="text">
+            <string>Doc Brief:</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLineEdit" name="lineEditClassDocBrief"/>
+         </item>
+        </layout>
+       </item>
+       <item>
         <layout class="QHBoxLayout" name="horizontalLayout_8">
          <item>
           <widget class="QLabel" name="labelClassDocDetail">
@@ -266,6 +280,33 @@
         </layout>
        </item>
        <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_11">
+         <item>
+          <widget class="QCheckBox" name="checkBoxClassSortAllProperties">
+           <property name="text">
+            <string>Sort All Properties</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_13">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+        </layout>
+       </item>
+       <item>
         <spacer name="verticalSpacer_3">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -312,6 +353,20 @@
             </size>
            </property>
           </spacer>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pushButtonPropertiesGroupAdd">
+           <property name="text">
+            <string>&amp;Add</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pushButtonPropertiesGroupRemove">
+           <property name="text">
+            <string>&amp;Remove</string>
+           </property>
+          </widget>
          </item>
          <item>
           <widget class="QLabel" name="labelPropertiesGroupName">
@@ -500,50 +555,6 @@
          </item>
         </layout>
        </item>
-       <item>
-        <layout class="QHBoxLayout" name="horizontalLayout">
-         <item>
-          <spacer name="horizontalSpacer">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item>
-          <widget class="QPushButton" name="pushButtonPropertiesGroupAdd">
-           <property name="text">
-            <string>&amp;Add</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="pushButtonPropertiesGroupRemove">
-           <property name="text">
-            <string>&amp;Remove</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <spacer name="horizontalSpacer_2">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-        </layout>
-       </item>
       </layout>
      </widget>
      <widget class="QWidget" name="tabEnumType">
@@ -726,6 +737,50 @@
       </layout>
      </widget>
     </widget>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButtonSetSave">
+       <property name="text">
+        <string>&amp;Save</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButtonSetClose">
+       <property name="text">
+        <string>&amp;Close</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
