--- a/widget.ui
+++ b/widget.ui
@@ -16,7 +16,7 @@
   <property name="locale">
    <locale language="C" country="AnyCountry"/>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_4">
+  <layout class="QVBoxLayout" name="verticalLayoutMain">
    <item>
     <widget class="QSplitter" name="splitterPrimary">
      <property name="orientation">
@@ -212,7 +212,7 @@
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
+    <layout class="QHBoxLayout" name="horizontalLayoutButtons">
      <item>
       <widget class="QComboBox" name="comboBoxSelectPropertiesGroups"/>
      </item>
