On branch master 	modified:   classsettingsGeneratorFunctions.cpp 	modified:   dialogedit.ui 	modified:   dialogset.ui 	modified:   sharedFunctions.h 	modified:   widget.cpp 	modified:   widget.ui 	1.修正生成的源文件中构造函数、析构函数没有文档注释的bug。 	2.修正生成的函数定义的代码中，如果statementsAfterResetProperty、statementsAfterWriteProperty、statementsBeforeResetProperty、statementsBeforeWriteProperty、statementsInReadProperty或statementsMiddleWriteProperty为空时，生成的代码中仍为其留空位的bug。 	3.修正界面中tab顺序不对的bug。

--- a/widget.ui
+++ b/widget.ui
@@ -314,6 +314,7 @@
   <tabstop>tableWidgetProperties</tabstop>
   <tabstop>textBrowserCppDeclares</tabstop>
   <tabstop>textBrowserCppDefines</tabstop>
+  <tabstop>comboBoxSelectPropertiesGroups</tabstop>
   <tabstop>pushButtonOpenProject</tabstop>
   <tabstop>pushButtonNewProject</tabstop>
   <tabstop>pushButtonSaveProject</tabstop>
@@ -322,6 +323,7 @@
   <tabstop>pushButtonAddProperty</tabstop>
   <tabstop>pushButtonRemoveProperty</tabstop>
   <tabstop>pushButtonSetProject</tabstop>
+  <tabstop>pushButtonExportClass</tabstop>
  </tabstops>
  <resources/>
  <connections/>
