--- a/dialogedit.ui
+++ b/dialogedit.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>438</width>
-    <height>327</height>
+    <width>457</width>
+    <height>344</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -113,6 +113,9 @@
          <property name="text">
           <string>Default Value:</string>
          </property>
+         <property name="buddy">
+          <cstring>lineEditPropertyDefaultValue</cstring>
+         </property>
         </widget>
        </item>
        <item row="0" column="0">
@@ -162,6 +165,9 @@
          <property name="text">
           <string>Revision:</string>
          </property>
+         <property name="buddy">
+          <cstring>spinBoxPropertyRevision</cstring>
+         </property>
         </widget>
        </item>
        <item row="5" column="1">
@@ -178,6 +184,9 @@
         <widget class="QLabel" name="labelPropertyDocBrief">
          <property name="text">
           <string>Doc Brief:</string>
+         </property>
+         <property name="buddy">
+          <cstring>lineEditPropertyDocBrief</cstring>
          </property>
         </widget>
        </item>
@@ -254,6 +263,9 @@
          <property name="text">
           <string>Enabled:</string>
          </property>
+         <property name="buddy">
+          <cstring>checkBoxPropertyEnabled</cstring>
+         </property>
         </widget>
        </item>
        <item row="5" column="1">
@@ -267,6 +279,9 @@
         <widget class="QLabel" name="labelPropertyUser">
          <property name="text">
           <string>User:</string>
+         </property>
+         <property name="buddy">
+          <cstring>checkBoxPropertyUser</cstring>
          </property>
         </widget>
        </item>
@@ -362,6 +377,9 @@
          <property name="text">
           <string>Scriptable:</string>
          </property>
+         <property name="buddy">
+          <cstring>checkBoxPropertyScriptable</cstring>
+         </property>
         </widget>
        </item>
        <item row="2" column="1">
@@ -382,12 +400,18 @@
          <property name="text">
           <string>Stored:</string>
          </property>
+         <property name="buddy">
+          <cstring>checkBoxPropertyStored</cstring>
+         </property>
         </widget>
        </item>
        <item row="10" column="0">
         <widget class="QLabel" name="labelPropertyConstant">
          <property name="text">
           <string>Constant:</string>
+         </property>
+         <property name="buddy">
+          <cstring>checkBoxPropertyConstant</cstring>
          </property>
         </widget>
        </item>
@@ -467,12 +491,18 @@
          <property name="text">
           <string>Designable:</string>
          </property>
+         <property name="buddy">
+          <cstring>checkBoxPropertyDesignable</cstring>
+         </property>
         </widget>
        </item>
        <item row="11" column="0">
         <widget class="QLabel" name="labelPropertyFinal">
          <property name="text">
           <string>Final:</string>
+         </property>
+         <property name="buddy">
+          <cstring>checkBoxPropertyFinal</cstring>
          </property>
         </widget>
        </item>
@@ -542,15 +572,24 @@
  <tabstops>
   <tabstop>lineEditPropertyName</tabstop>
   <tabstop>lineEditPropertyDocName</tabstop>
+  <tabstop>lineEditPropertyDocBrief</tabstop>
   <tabstop>lineEditPropertyDocDetail</tabstop>
   <tabstop>comboBoxPropertyType</tabstop>
   <tabstop>lineEditPropertyTypeStringName</tabstop>
+  <tabstop>lineEditPropertyDefaultValue</tabstop>
+  <tabstop>spinBoxPropertyRevision</tabstop>
   <tabstop>checkBoxPropertyMember</tabstop>
   <tabstop>checkBoxPropertyRead</tabstop>
   <tabstop>checkBoxPropertyWrite</tabstop>
   <tabstop>checkBoxPropertyReset</tabstop>
   <tabstop>checkBoxPropertyNotify</tabstop>
   <tabstop>checkBoxPropertyEnabled</tabstop>
+  <tabstop>checkBoxPropertyDesignable</tabstop>
+  <tabstop>checkBoxPropertyScriptable</tabstop>
+  <tabstop>checkBoxPropertyStored</tabstop>
+  <tabstop>checkBoxPropertyUser</tabstop>
+  <tabstop>checkBoxPropertyConstant</tabstop>
+  <tabstop>checkBoxPropertyFinal</tabstop>
   <tabstop>pushButtonSaveProperty</tabstop>
   <tabstop>pushButtonCloseProperty</tabstop>
  </tabstops>
