--- a/dialogset.ui
+++ b/dialogset.ui
@@ -116,6 +116,9 @@
            <property name="text">
             <string>Doc Name:</string>
            </property>
+           <property name="buddy">
+            <cstring>lineEditClassDocName</cstring>
+           </property>
           </widget>
          </item>
          <item>
@@ -147,6 +150,9 @@
            <property name="text">
             <string>Doc Brief:</string>
            </property>
+           <property name="buddy">
+            <cstring>lineEditClassDocBrief</cstring>
+           </property>
           </widget>
          </item>
          <item>
@@ -163,6 +169,9 @@
            </property>
            <property name="alignment">
             <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+           </property>
+           <property name="buddy">
+            <cstring>lineEditClassDocDetail</cstring>
            </property>
           </widget>
          </item>
@@ -520,6 +529,9 @@
             <property name="text">
              <string>Read Function:</string>
             </property>
+            <property name="buddy">
+             <cstring>plainTextEditPropertiesGroupReadFunction</cstring>
+            </property>
            </widget>
           </item>
           <item row="0" column="1">
@@ -527,12 +539,18 @@
             <property name="text">
              <string>Reset function start:</string>
             </property>
+            <property name="buddy">
+             <cstring>plainTextEditPropertiesGroupResetFunctionLast</cstring>
+            </property>
            </widget>
           </item>
           <item row="0" column="2">
            <widget class="QLabel" name="labelPropertiesGroupResetFunctionLast">
             <property name="text">
              <string>Reset function last:</string>
+            </property>
+            <property name="buddy">
+             <cstring>plainTextEditPropertiesGroupResetFunctionStart</cstring>
             </property>
            </widget>
           </item>
@@ -559,6 +577,9 @@
             <property name="alignment">
              <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
             </property>
+            <property name="buddy">
+             <cstring>plainTextEditPropertiesGroupWriteFunctionStart</cstring>
+            </property>
            </widget>
           </item>
           <item row="2" column="1">
@@ -575,6 +596,9 @@
             <property name="alignment">
              <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
             </property>
+            <property name="buddy">
+             <cstring>plainTextEditPropertiesGroupWriteFunctionMiddle</cstring>
+            </property>
            </widget>
           </item>
           <item row="2" column="2">
@@ -590,6 +614,9 @@
             </property>
             <property name="alignment">
              <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+            </property>
+            <property name="buddy">
+             <cstring>plainTextEditPropertiesGroupWriteFunctionLast</cstring>
             </property>
            </widget>
           </item>
@@ -654,6 +681,9 @@
            </property>
            <property name="text">
             <string>Type List:</string>
+           </property>
+           <property name="buddy">
+            <cstring>listWidgetEnumTypeList</cstring>
            </property>
           </widget>
          </item>
@@ -732,6 +762,9 @@
              <property name="text">
               <string>Type Name:</string>
              </property>
+             <property name="buddy">
+              <cstring>lineEditEnumTypeName</cstring>
+             </property>
             </widget>
            </item>
            <item row="0" column="1">
@@ -742,6 +775,9 @@
              <property name="text">
               <string>prefix:</string>
              </property>
+             <property name="buddy">
+              <cstring>lineEditEnumPrefix</cstring>
+             </property>
             </widget>
            </item>
            <item row="1" column="1">
@@ -751,6 +787,9 @@
             <widget class="QLabel" name="labelEnumSuffix">
              <property name="text">
               <string>suffix:</string>
+             </property>
+             <property name="buddy">
+              <cstring>lineEditEnumSuffix</cstring>
              </property>
             </widget>
            </item>
@@ -765,6 +804,9 @@
             <widget class="QLabel" name="labelEnumVars">
              <property name="text">
               <string>Vars:</string>
+             </property>
+             <property name="buddy">
+              <cstring>plainTextEditEnumsVars</cstring>
              </property>
             </widget>
            </item>
@@ -865,7 +907,39 @@
   <tabstop>tabWidgetSet</tabstop>
   <tabstop>lineEditClassName</tabstop>
   <tabstop>lineEditClassInherits</tabstop>
+  <tabstop>lineEditClassDocName</tabstop>
+  <tabstop>lineEditClassDocBrief</tabstop>
+  <tabstop>lineEditClassDocDetail</tabstop>
   <tabstop>comboBoxClassTypeInformation</tabstop>
+  <tabstop>checkBoxClassGeneratePreventReentrantCode</tabstop>
+  <tabstop>checkBoxClassSortAllProperties</tabstop>
+  <tabstop>comboBoxPropertiesGroups</tabstop>
+  <tabstop>pushButtonPropertiesGroupChangeName</tabstop>
+  <tabstop>pushButtonPropertiesGroupAdd</tabstop>
+  <tabstop>pushButtonPropertiesGroupRemove</tabstop>
+  <tabstop>lineEditPropertiesGroupName</tabstop>
+  <tabstop>checkBoxPropertiesGroupReadFunctionIsInline</tabstop>
+  <tabstop>checkBoxPropertiesGroupWriteFunctionIsInline</tabstop>
+  <tabstop>checkBoxPropertiesGroupWriteFunctionEmitSignal</tabstop>
+  <tabstop>checkBoxPropertiesGroupResetFunctionIsInline</tabstop>
+  <tabstop>plainTextEditPropertiesGroupReadFunction</tabstop>
+  <tabstop>plainTextEditPropertiesGroupResetFunctionLast</tabstop>
+  <tabstop>plainTextEditPropertiesGroupResetFunctionStart</tabstop>
+  <tabstop>plainTextEditPropertiesGroupWriteFunctionStart</tabstop>
+  <tabstop>plainTextEditPropertiesGroupWriteFunctionMiddle</tabstop>
+  <tabstop>plainTextEditPropertiesGroupWriteFunctionLast</tabstop>
+  <tabstop>checkBoxxPropertiesGroupEnabled</tabstop>
+  <tabstop>listWidgetEnumTypeList</tabstop>
+  <tabstop>pushButtonEnumTypeNameAdd</tabstop>
+  <tabstop>pushButtonEnumTypeNameRemove</tabstop>
+  <tabstop>lineEditEnumTypeName</tabstop>
+  <tabstop>lineEditEnumPrefix</tabstop>
+  <tabstop>lineEditEnumSuffix</tabstop>
+  <tabstop>plainTextEditEnumsVars</tabstop>
+  <tabstop>plainTextEditEnumDeclare</tabstop>
+  <tabstop>plainTextEditTypeOrder</tabstop>
+  <tabstop>pushButtonSetSave</tabstop>
+  <tabstop>pushButtonSetClose</tabstop>
  </tabstops>
  <resources/>
  <connections/>
