On branch master 	modified:   classsettings.cpp 	modified:   classsettings.h 	modified:   classsettingsGeneratorFunctions.cpp 	modified:   classsettingsInlineFunctions.h 	modified:   codescheme/paraments_CodeFormat.h 	modified:   dialogset.ui 	modified:   propertiesgroup.cpp 	modified:   propertiesgroup.h 	modified:   property.cpp 	modified:   sharedFunctions.h 	modified:   widget.cpp 	modified:   widget.h 	1.加强对复杂类型的匈牙利命名法的支持。 	2.增加继承QWindow类。 	3.修正当继承自非QObject类时，仍会有发送信号的代码的bug。 	4.修正一些函数的文档注释错写成默认构造函数的bug。 	5.修正一些函数的定义代码错位的bug。 	6.将Q_PROPERTY宏中RESET键值的true、false改为reset函数的函数名。 	7.在替换第一个字母大写或小写的函数中，由使用QString::replace改为对字符串的第一个字符进行操作。 	8.在Widget::on_pushButtonExportClass_clicked函数中，改为如果头文件取消输出，源文件被输出。 	9.修正主界面不能记住上次存档所用路径的bug。 	10.清除一些多余的代码。

--- a/dialogset.ui
+++ b/dialogset.ui
@@ -246,6 +246,11 @@
            </item>
            <item>
             <property name="text">
+             <string>Inherits QWindow</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
              <string>None(Copy on write)</string>
             </property>
            </item>
